--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ember-cli-deploy-redis-publish",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "ember-cli-deploy-plugin"
   ],
   "license": "MIT",
   "author": "",
@@ -18,7 +19,11 @@
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^5.1.7"
+    "ember-cli-babel": "^5.1.7",
+    "ember-cli-deploy-plugin": "^0.2.9",
+    "ember-cli-deploy-redis": "^1.0.0",
+    "redis": "^2.7.1",
+    "rsvp": "^3.5.0"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
